# video-editor

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  add_background_music.py  add_emojis_to_segment_videos.py  add_subtitles.py  add_title.py  add_title_caption_music.py  apply_cuts.py  apply_edits.py  apply_speedup.py  compose_clips.py  describe_video.py  duration_tracker.py  extract_IG_caption.md  extract_frame.py  generate_copy_for_segments.py  get_transcript.py  laurie_foster_voice.md  main.py  music_search.py  package-lock.json  prepend_hooks.py  process_video.py  progress.py  propose_cuts.py  pyproject.toml  replace_post_videos.py  schedule_post.py  schedule_segment_videos.py  stream.py  test_silence_removal.py  title_suggestions.py  trim_smart.py  ui.py  update_post_titles.py
docs/: choose_music.md  edit-interchange-proposal.md  findmusic.md  ideas.md  pre-session-questions.md  repurpose.md  vision.md
sales-coach/: Makefile  app.py  db.py  features.md  import_billy.py  main.py  requirements.txt  sales_coach.db  test_coaching_prompt.py  todo
scripts/: apply_cuts_from_json.py  qc_and_discrimination_test.py  reapply_title_segment.sh  regen_whiteboard.py  remove_silence.py  rerun_06_to_09_all_segments.sh  schedule_segments_with_copy.py  verify_cut_transcripts.py
src/: add_background_music.py  add_subtitles.py  add_title.py  apply_cuts.py  apply_speedup.py  check_placement.py  cli_runner.py  describe_video.py  enhance_voice.py  get_transcript.py  process_video.py  profiler.md  remove_filler_words.py  repurpose_video.py  schedule_post.py  ui.py  (+3 more)
(+91 files in other folders)
