[project]
name = "video-editor"
version = "0.1.0"
description = "Video editing scripts for Marky"
requires-python = ">=3.10"
dependencies = [
    "deepgram-sdk>=5.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "prefect>=3.0.0",
    "google-genai>=0.2.0",
    "pillow>=10.0.0",
    "streamlit>=1.30.0",
]

[project.scripts]
process-video = "process_video:main"
video-editor = "main:main"
